# Scientific-Image-Forgery-Detection

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.bib  CONTRIBUTING.md  EXPERIMENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-kaggle.txt  requirements.txt
configs/: baseline_fpn_convnext.json  cls_convnext_small_encoder.json  cls_dinov2_base.json  cls_effnet_b4.json  cls_swin_tiny_encoder.json  default.json  dino_v1_718_u52.json  dino_v2_518_basev1.json  dino_v3_518_r69.json  dino_v3_518_r69_fft_gate.json  dino_v3_518_r69_fft_gate_tiled.json  dino_v3_518_r69_fft_gate_tta_plus.json  dino_v3_518_r69_freq_fusion.json  dino_v3_518_r69_freq_fusion_fft_gate_tta_plus.json  dino_v4_518_r69_multiscale.json  dino_v4_518_r69_multiscale_fft_gate_tta_plus.json  fft_classifier_logmag_256.json  fft_classifier_phase_only_256.json  infer_ensemble.json  seg_deeplabv3p_tu_resnest101e.json  seg_dinov2_base.json  seg_dinov2_base_640.json  seg_hero_effnet_b7.json  seg_segformer_mit_b2.json  seg_unetpp_tu_convnext_small.json  seg_unetpp_tu_swin_tiny.json
data/: README.md
docs/: COMPETITION.md  CONFIG.md  KAGGLE.md  MODEL_ZOO.md  PIPELINE.md  TUTORIALS.md
notebooks/: baseline_public_0_303.ipynb  fase_00_pipeline_unico_kaggle.ipynb  fase_00_pipeline_unico_kaggle.py  fase_00_submissao_kaggle.ipynb  fase_00_submissao_kaggle.py  fase_01_pre_treinamento_kaggle.ipynb  fase_01_pre_treinamento_kaggle.py  fase_01_setup_offline_kaggle.ipynb  fase_01_setup_offline_kaggle.py  fase_01_treino_kaggle.ipynb  fase_01_treino_kaggle.py  fase_02_modelo_baseline_segmentacao_kaggle.ipynb  fase_02_modelo_baseline_segmentacao_kaggle.py  fase_02_treino_classificador_kaggle.ipynb  fase_02_treino_classificador_kaggle.py  fase_03_pipeline_treino_inferencia_submissao_kaggle.ipynb  fase_03_pipeline_treino_inferencia_submissao_kaggle.py  fase_03_treino_segmentacao_kaggle.ipynb  fase_03_treino_segmentacao_kaggle.py  fase_04_inferencia_submissao_kaggle.ipynb  fase_04_inferencia_submissao_kaggle.py  kernel-metadata.json
scripts/: download_timm_weights.py  ensemble_submissions.py  evaluate_submission.py  infer_submit.py  optimize_ensemble.py  optuna_tune_postprocess.py  package_kaggle_dataset.py  predict_dino_oof.py  predict_oof.py  predict_seg_oof.py  predict_submission.py  predict_test.py  sanity_submissions.py  (+12 more)
(+81 files in other folders)
