[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeryseg"
version = "0.1.0"
description = "Scientific Image Forgery Detection utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Scientific-Image-Forgery-Detection contributors"}]
keywords = ["kaggle", "image-forensics", "segmentation", "copy-move", "forgery-detection"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "albumentations",
  "numpy",
  "opencv-python",
  "pandas",
  "pillow",
  "pyyaml",
  "scikit-learn",
  "scipy",
  "segmentation-models-pytorch",
  "timm",
  "torch",
  "torchvision",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/Fear-Hungry/Scientific-Image-Forgery-Detection"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  ".venv",
  "outputs",
  "runs",
  "logs",
  "data",
  "notebooks/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402"]
